--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "request": "^2.72.0"
+  },
+  "engines": {
+    "node": "~4.1.2"
   }
 }
